--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "pnpm --parallel run build",
+		"changeset": "changeset",
 		"dev.react": "pnpm --filter react run dev",
 		"lint.check": "pnpm biome check .",
 		"lint.write": "pnpm biome check --write .",
@@ -13,6 +14,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.3",
+		"@changesets/changelog-github": "^0.5.0",
+		"@changesets/cli": "^2.27.9",
 		"browserslist": "^4.24.0",
 		"lightningcss": "^1.27.0",
 		"typescript": "^5.6.3",
