--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,3 +140,43 @@ jobs:
       - name: Run build
         run: |
           pnpm run build
+
+  # ============================================================================
+  # Release
+  # ============================================================================
+  release:
+    name: Release
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    strategy:
+      matrix:
+        node: [22]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@4
+
+      - name: Setup node ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: pnpm
+
+      - name: Install dependencies
+        run: |
+          pnpm install --frozen-lockfile --prefer-offline
+
+      - name: Create Release PR or Release
+        uses: changesets/action@v1
+        with:
+          publish: pnpm changeset tag
+          commit: '[ci]: release'
+          title: '[ci] release'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
