feat: svelte app

--- a/biome.json
+++ b/biome.json
@@ -39,6 +39,17 @@
 			}
 		},
 		{
+			"include": ["*.svelte"],
+			"linter": {
+				"rules": {
+					"style": {
+						"useConst": "off",
+						"useImportType": "off"
+					}
+				}
+			}
+		},
+		{
 			"include": ["**/*.css"],
 			"linter": {
 				"rules": {
