--- a/packages/angular/netlify.toml
+++ b/packages/angular/netlify.toml
@@ -3,7 +3,7 @@
 	base = "packages/angular"
   command = "ng build"
   functions = "netlify/functions"
-  publish = "dist/quiz"
+  publish = "dist/quiz/browser"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
