--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"build": "pnpm --parallel run build",
 		"changeset": "changeset",
+		"clean": "pnpm --parallel run clean",
 		"dev.react": "pnpm --filter react run dev",
 		"lint.check": "pnpm biome check .",
 		"lint.write": "pnpm biome check --write .",
