--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
+		"clean": "rm -rf dist && rm -rf node_modules",
 		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"lint.check": "pnpm biome check .",
