--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	"scripts": {
 		"build": "pnpm --parallel run build",
 		"changeset": "changeset",
+		"clean": "pnpm --parallel run clean",
+		"clean.modules": "find . -name node_modules -type d -prune -print -exec rm -rf {} \\;",
 		"dev.react": "pnpm --filter react run dev",
 		"lint.check": "pnpm biome check .",
 		"lint.write": "pnpm biome check --write .",
