--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -29,7 +29,7 @@
 		"@angular-devkit/build-angular": "^18.2.12",
 		"@angular/cli": "^18.2.12",
 		"@angular/compiler-cli": "^18.2.13",
-		"typescript": "~5.7.2"
+		"typescript": "5.5.4"
 	},
 	"volta": {
 		"extends": "../../package.json"
