chore(angular): pin typescript 5.5.4

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,9 +22,20 @@
 		"pnpm",
 
 	],
+
+	// angular: pin typescript
+	"packageRules": [
+    {
+      "matchPackageNames": ["typescript"],
+      "matchPaths": ["packages/angular/package.json"],
+      "matchManagers": ["npm"],
+      "enabled": false
+    }
+  ],
+
   "postUpdateOptions": ["pnpmDedupe"],
 	"rangeStrategy": "bump",
 	"schedule": [
 		"* * * * 0/2"
-	]
+	],
 }
