--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -28,7 +28,7 @@
 		"@angular-devkit/build-angular": "^18.2.8",
 		"@angular/cli": "^18.2.8",
 		"@angular/compiler-cli": "^18.2.0",
-		"typescript": "~5.5.2"
+		"typescript": "5.5.4"
 	},
 	"volta": {
 		"extends": "../../package.json"
