--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
 		"@changesets/cli": "^2.27.11",
 		"browserslist": "^4.24.3",
 		"lightningcss": "^1.28.2",
-		"typescript": "^5.7.2",
-		"vite": "^5.4.11"
+		"typescript": "^5.7.2"
 	},
 	"volta": {
 		"node": "22.5.1",
