--- a/packages/qwik/package.json
+++ b/packages/qwik/package.json
@@ -18,7 +18,8 @@
 		"type.check": "tsc --noEmit"
 	},
 	"devDependencies": {
-		"@builder.io/qwik-city": "^1.12.0"
+		"@builder.io/qwik-city": "^1.12.0",
+		"vite": "^5.4.11"
 	},
 	"dependencies": {
 		"@builder.io/qwik": "^1.12.0",
