--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,7 +21,8 @@
 	"devDependencies": {
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
-		"@vitejs/plugin-react": "^4.3.4"
+		"@vitejs/plugin-react": "^4.3.4",
+		"vite": "^5.4.11"
 	},
 	"volta": {
 		"extends": "../../package.json"
