--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -21,7 +21,8 @@
 		"@sveltejs/vite-plugin-svelte": "4.0.4",
 		"@tsconfig/svelte": "^5.0.4",
 		"svelte": "5.16.0",
-		"svelte-check": "^4.1.1"
+		"svelte-check": "^4.1.1",
+		"vite": "^5.4.11"
 	},
 	"volta": {
 		"extends": "../../package.json"
