--- a/packages/qwik/package.json
+++ b/packages/qwik/package.json
@@ -9,6 +9,7 @@
 		"build.preview": "vite build --ssr src/entry.preview.tsx",
 		"build.server": "vite build -c adapters/static/vite.config.ts",
 		"build.types": "tsc --incremental --noEmit",
+		"clean": "rm -rf dist && rm -rf server && rm -rf node_modules && rm tmp/*.tsbuildinfo",
 		"dev": "vite --mode ssr",
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"lint.check": "pnpm biome check .",
