--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -6,8 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"clean": "rm -rf dist && rm -rf node_modules",
+		"preview": "vite preview",
 		"lint.check": "pnpm biome check .",
 		"lint.write": "pnpm biome check --write .",
 		"type.check": "tsc --noEmit"
